# sota

./: .gitignore  README.md  pyproject.toml
docs/: DATA_FORMAT.md  SUBTASK_LABELS.md
scripts/: download_data.py  setup_rclone.sh
src/sota_data/: __init__.py  load.py  visualize.py
